--- a/css/bootstrap-custom.css
+++ b/css/bootstrap-custom.css
@@ -1,27 +1,31 @@
 a{
-	outline:0 !important;	
+	outline:0 !important;
+	color: #ebb576;
 }
 .navbar-light {
 	background-color:transparent!important;
-	font-size:14px;
+	font-size:13px;
 }
-.navbar-light .navbar-nav .nav-link{ 
+.navbar-light .navbar-nav .nav-link{
 	color:#fff;	
-	font-weight:600;
-	padding-right: 20px;
+	font-weight: 600;
+	padding: 5px 17px;
 	text-transform: uppercase;
 }
+.navbar-light .navbar-nav .nav-link.btn-menu{
+	border: 2px solid #555;
+	border-radius: 4px;
+}
 .navbar-light .navbar-nav .nav-link:hover{
-	background-color:transparent;
-	color:#c38346;
+	color:#ebb576;
 }
 .navbar-light .navbar-nav .active .nav-link{
 	background-color:transparent;
-	color:#c38346;
+	color:#ebb576;
 }
 .navbar-light .navbar-nav .active .nav-link:hover{
 	background-color:transparent;
-	color:#c38346;
+	color:#ebb576;
 }
 
 
@@ -31,12 +35,12 @@ a{
 }
 .navbar-light .navbar-nav .show > .nav-link:focus,
 .navbar-light .navbar-nav .show > .nav-link:hover{
-    color: #c38346;
+    color: #fff;
     background-color: transparent;
 }
 
 .dropdown-menu{
-	background-color:#3D3D3D;
+	background-color:#212121;
 	border:0;
 }
 .dropdown-menu .dropdown-item{
@@ -47,7 +51,7 @@ a{
 }
 .navbar-light .navbar-nav .show .dropdown-menu .dropdown-item:hover,
 .navbar-light .navbar-nav .show .dropdown-menu .dropdown-itema:focus {
-  color: #ff9306;
+  color: #ff5518;
   text-decoration: none;
   background-color: transparent;
 }
@@ -71,19 +75,12 @@ a{
 	cursor:pointer;
 }
 .navbar-light .navbar-brand {
-	color:#fff;	
-	font-weight: 700;
+	color:#4676fa;		
 	height: auto;
-	font-size: 24px;
-}
-.navbar-light .navbar-brand i{
-	background-color: #FE8F01;
-	color: #fff;
-	padding: 5px;
-	
+	text-transform: uppercase;
 }
 .navbar-light .navbar-brand:hover {
- 	color:#FE8F01;
+ 	color:#4676fa;
 }
 .navbar-light .navbar-brand img{
 	
